# Slither-Sprint

./: Makefile  README.md  pyproject.toml
src/slither_sprint/: SlitherSprintGame.spec  config.py  game.py
src/slither_sprint/controller/: game_controller.py
src/slither_sprint/model/: apple.py  game_state.py  obstacles.py  pane.py  power_up.py  snake.py
src/slither_sprint/view/: renderer.py
