[project]
name = "slither-sprint"
version = "0.1.0"
description = "Two player snake game."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.6.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]

[project.scripts]
slither-sprint = "slither_sprint.game:main"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"